Move main method to cli.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = git2dot
-version = 0.8.3
+version = 0.0.1
 description = Visualize a git repository using graphviz dot.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -22,7 +22,7 @@ where = src
 
 [options.entry_points]
 console_scripts =
-  git2dot = git2dot.git2dot:main
+  git2dot = git2dot.cli:cli
 
 [options.extras_require]
 dev =
