--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,31 @@
+.DS_Store
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
 .python-version
-*~
-# Ignore generated files.
-example/example*.dot*
-example/example*.html
-example/README
-test/test*.dot
-test/test*.dot.html
-test/test*.dot.png
-test/test*.dot.svg
-test/test*.html
-test/test*.difflog
-test/test*.log
-test/test*.filter
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
+
+# Sphinx documentation
+docs/_build/
+
+# IDEs
+.idea/*
+
+.venv
+.mypy_cache
