Use graphviz library to render images

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ package_dir =
 packages = find:
 python_requires = >=3.9
 install_requires =
+  graphviz
   python-dateutil
 
 [options.packages.find]
