--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ package_dir =
 packages = find:
 python_requires = >=3.9
 install_requires =
-  graphviz
+  pydot
   python-dateutil
 
 [options.packages.find]
